# ref

./: .dockerignore  .env  .gitignore  .gitmodules  EXERCISES.md  README.md  ctrl.sh  docker-compose-testing.yml  docker-compose.template.yml  docker-compose.yml  exercise_template.yaml  generate-configs.py  prepare.py  ruff.toml  t.py  template.env
.claude/: CLAUDE.md
.github/workflows/: ci.yml
aslr-patch/: build.sh  disable.sh  enable.sh  keep-aslr-personality-on-setuid.patch
aslr-patched-kernel/: build.sh
aslr-patched-kernel/debian_10_4.19/: linux-libc-dev_4.19.132-1_amd64.deb
container-keys/: root_key  root_key.pub  user_key  user_key.pub
coverage/: .coveragerc
docs/: ARCHITECTURE.md  CONFIG.md  SCOREBOARD.md  SSH_PROXY_ARCHITECTURE.md
frontend-proxy/: Caddyfile.dev  Caddyfile.prod  Caddyfile.prod.j2  Caddyfile.routes  Dockerfile  entrypoint.sh  render_caddyfile.py
hooks/: install.sh  pre-commit  pre-push
pgadmin/: server-config.json
ref-docker-base/: Dockerfile  _instance-cmds.py  build.sh  my-shell.c  mypyrc  pylintrc  pyproject.toml  requirements.txt  reset-env  sshd_config  submission-tests  submission_tests  task-wrapper.c  task-wrapper.sh  task.py  wait-for-host
spa-frontend/: Dockerfile  entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
spa-frontend/src/: App.vue  main.ts
spa-frontend/src/api/: auth.ts  client.ts  registration.ts  (+2 more)
ssh-reverse-proxy/: Cargo.toml  Dockerfile
ssh-reverse-proxy/src/: api.rs  config.rs  main.rs  server.rs
ssh-reverse-proxy/src/channel/: direct_tcpip.rs  forwarder.rs  mod.rs  remote_forward.rs  shell.rs  x11.rs
ssh-wrapper/: Dockerfile  pyproject.toml  requirements.txt  run-service.sh  ssh-authorized-keys.py  ssh-wrapper.py  ssh_config  sshd_config  tinyproxy.conf
ssh-wrapper/ref-interface/: Cargo.toml  libref_interface.h
ssh-wrapper/ref-interface/src/: api.rs
tests/: conftest.py  pyproject.toml  pytest.ini  summarize_logs.py  test_config.py
tests/api/: __init__.py  conftest.py  test_admin_api.py  test_core_api.py  test_file_browser.py  test_login_api.py  test_rate_limiting.py  test_student_api.py
tests/e2e/: __init__.py  test_exercise_lifecycle.py  test_grading_workflow.py  test_port_forwarding.py  test_resource_prefix.py  test_rust_ssh_proxy.py  test_ssh_key_types.py  test_user_isolation.py
tests/fixtures/: __init__.py
tests/helpers/: __init__.py  bridge_counter.py  conditions.py  exercise_factory.py  method_exec.py  ref_instance.py  remote_exec.py  ssh_client.py  web_client.py
tests/helpers/templates/: submission_tests.py
tests/integration/: __init__.py  conftest.py  test_exercise_lifecycle.py  test_groups_registration.py  test_ssh_client.py  test_submission_workflow.py  test_user_registration.py  test_web_client.py
tests/unit/: __init__.py  test_error.py  test_exercise_config.py  test_groups_logic.py  test_ref_instance.py  test_scoring.py  test_security.py  test_ssh_client.py  test_task_discovery.py  test_util.py  test_web_client.py
webapp/: Dockerfile  config.py  config_test.py  pyproject.toml  remote_exec_runner.py  requirements.txt  run-server.sh  seccomp.json  setup.py  upgrade_db.sh  venv.sh
webapp/coverage/: sitecustomize.py
webapp/migrations/versions/: 18bf6b54afce_.py  2676b26732cb_.py  3c4183d13d38_.py  3f9e41203c59_.py  4207d689b420_.py  46f167e616ce_.py  4c71c9e8bba4_.py  595d4b24fbb9_.py  6145fb21e678_.py  735c0c71d806_.py  77e32a5a4f11_.py  7ea1b14a5b23_.py  819d8b54dd86_.py  8c05d5e66a3f_.py  9c5db053ae94_.py  9f8d78b97aba_.py  a1b2c3d4e5f6_.py  a538def48d62_.py  ada4eb80f1c9_.py  afd6d757a15e_.py  b2e4f6a8c0d2_.py  c3f5a7d9e1b4_groups_and_group_name_lists.py  d5e7f9a0b1c2_per_task_scoring_policies.py  e71c7341f138_.py  fd7bdab619ae_.py
webapp/ref/: __init__.py  error.py
webapp/ref/core/: __init__.py  dashboard.py  docker.py  error.py  exercise.py  flash.py  image.py  instance.py  logging.py  scoring.py  security.py  task_discovery.py  user.py  util.py
webapp/ref/frontend_api/: __init__.py  auth.py  scoreboard.py  students.py
webapp/ref/model/: __init__.py  enums.py  exercise.py  exercise_config.py  instance.py  settings.py  user.py  util.py
webapp/ref/proxy/: __init__.py  server.py
webapp/ref/services_api/: __init__.py  instance.py  ssh.py
webapp/ref/static/css/: cryptography.css  get_key.css  global.css  scoreboard.css
webapp/ref/static/js/: plots.js  utils.js
webapp/ref/static/js/ranking/: best_sum.js  f1_time_weighted.js
webapp/ref/static/js/scoreboard/: default.js  minimal.js
webapp/ref/templates/: 400.html  404.html  500.html  _navbar.html  admin_base.html  base.html  container_graph.html  error.html  exercise_build.html  exercise_config_diff.html  exercise_config_edit.html  exercise_do_import.html  exercise_file_browser.html  exercise_view_all.html  exercise_view_single.html  grading_grade.html  grading_search.html  grading_search_result.html  grading_view_all.html  grading_view_exercise.html  group_view_all.html  index.html  instance_view_details.html  instances_review.html  instances_view_list.html  login.html  maintenance.html  student_base.html  student_getkey.html  student_landing.html  student_restorekey.html  student_view_all.html  student_view_single.html  submissions_view_all.html  system_gc.html  system_group_names.html  system_group_names_edit.html  system_settings.html  user_edit.html  visualization_containers_and_networks_graph.html  (+2 more)
webapp/ref/templates/components/: file_tree.html
webapp/ref/templates/file_browser/: alert.html  file_browser.html  file_tree.html
webapp/ref/templates/modal/: ok.html
webapp/ref/templates/scoreboard/: default.html  minimal.html
webapp/ref/view/: __init__.py  api.py  build_status.py  exercise.py  file_browser.py  grading.py  graph.py  group.py  group_names.py  instances.py  login.py  student.py  submission.py  system.py  system_settings.py  task.py  visualization.py
webapp/ref_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
webapp/remote_exercise_framework.egg-info/: PKG-INFO  SOURCES.txt
webapp/templates/: exercise_view_all.html
(+26 files in other folders)
