[project]
name = "ref-docker-base"
version = "0.1.0"
description = "Docker base image dependencies for REF"
requires-python = ">=3.10"
dependencies = [
    "backcall==0.2.0",
    "blinker==1.7.0",
    "cerberus==1.3.7",
    "chardet==5.2.0",
    "distro==1.9.0",
    "importlib-resources==6.5.2",
    "ipython==8.31.0",
    "itsdangerous==2.2.0",
    "lazy-object-proxy==1.10.0",
    "matplotlib==3.10.0",
    "mypy==1.14.1",
    "oauthlib==3.2.2",
    "opencv-python==4.11.0.86",
    "pathlib2==2.3.7.post1",
    "pickleshare==0.7.5",
    "pwntools==4.14.0",
    "pyjwt==2.7.0",
    "pylint==3.3.4",
    "pyyaml==6.0.1",
    "requests-unixsocket==0.3.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]
