[project]
name = "ref-docker-base"
version = "0.1.0"
description = "Docker base image dependencies for REF"
requires-python = ">=3.10"
dependencies = [
    "backcall==0.2.0",
    "blinker==1.9.0",
    "cerberus==1.3.8",
    "chardet==7.4.3",
    "distro==1.9.0",
    "importlib-resources==7.1.0",
    "ipython==8.39.0",
    "itsdangerous==2.2.0",
    "lazy-object-proxy==1.12.0",
    "matplotlib==3.10.8",
    "mypy==1.20.1",
    "oauthlib==3.3.1",
    "opencv-python==4.13.0.92",
    "pathlib2==2.3.7.post1",
    "pickleshare==0.7.5",
    "pwntools==4.15.0",
    "pyjwt==2.12.1",
    "pylint==4.0.5",
    "pyyaml==6.0.3",
    "requests-unixsocket==0.4.1",
    "tomli==2.4.1",
    "tqdm==4.67.3",
    "wrapt==2.1.2",
    "zipp==3.23.1",
]

[tool.uv]
cache-dir = ".uv-cache"
