[project]
name = "ref-webapp"
version = "0.1.0"
description = "Web application dependencies for REF"
requires-python = ">=3.10"
dependencies = [
    "ansi2html==1.9.2",
    "colorama==0.4.6",
    "argh==0.31.3",
    "arrow==1.4.0",
    "async-timeout==5.0.1",
    "backports.tarfile==1.2.0",
    "cffi==2.0.0",
    "coloredlogs==15.0.1",
    "docker==7.1.0",
    "flask-bcrypt==1.0.1",
    "flask-debugtoolbar==0.16.0",
    "flask-failsafe==0.2",
    "flask-limiter==4.1.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-moment==1.0.6",
    "fuzzywuzzy==0.18.0",
    "gunicorn==25.3.0",
    "hypothesis==6.152.1",
    "importlib-metadata==9.0.0",
    "jaraco.collections==5.2.1",
    "pip-chill==1.0.5",
    "platformdirs==4.9.6",
    "psycopg2-binary==2.9.11",
    "py==1.11.0",
    "pycryptodome==3.23.0",
    "pyparsing==3.3.2",
    "python-levenshtein==0.27.3",
    "python-telegram-handler==2.2.1",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "rq==2.7.0",
    "toml==0.10.2",
    "tomli==2.4.1",
    "uwsgi==2.0.31",
    "wcwidth==0.6.0",
    "websocket-client==1.9.0",
    "wtforms==3.2.1",
    "cloudpickle>=3.0.0",
    "cryptography>=46.0.7",
]

[tool.uv]
cache-dir = ".uv-cache"
